--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
     text-align: center;
     font-family: sans-serif;
-    background-color: #402727;
+    background-color: #000000;
 }
 
 /* Header y Navbar */
@@ -61,10 +61,12 @@ body {
     justify-content: center;
     align-items: center;
     height: 60vh;
-    background: url(header.avif) no-repeat center;
+    background: url(costos.avif) no-repeat center;
+    background-attachment: fixed;
     background-size: cover;
+    text-align: center;
+    padding: 60px 50px;
 }
-
 .title {
     margin-bottom: 40px;
     font-size: 60px;
@@ -115,7 +117,7 @@ p {
 
 .sau {
     padding: 30px;
-    background: #631414;
+    background: #8f0a0a;
 }
 
 .box-container {
@@ -165,7 +167,7 @@ p {
 }
 
 .price {
-    background: url(costos.jpg) no-repeat center;
+    background: url(costos.avif) no-repeat center;
     background-attachment: fixed;
     background-size: cover;
     text-align: center;
@@ -224,3 +226,4 @@ p {
         padding: 0 20px;
     }
 }
+
